--- a/index.html
+++ b/index.html
@@ -9,26 +9,18 @@
 		<title>Talentoday - Technical test</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- <link rel="stylesheet" href="app/bower_components/html5-boilerplate/css/normalize.css"> -->
-	<!-- <link rel="stylesheet" href="app/bower_components/html5-boilerplate/css/main.css"> -->
-	<!-- <link rel="stylesheet" href="app/css/app.css"/> -->
+	<link rel="stylesheet" href="style/main.css"/>
 
 
-	<script src="script/bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
+	<script src="libs/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-	<h1>AngularJS + RequireJS</h1>
-	<ul class="menu">
-		<li><a href="#/view1">view1</a></li>
-		<li><a href="#/view2">view2</a></li>
-	</ul>
-
 	<!--[if lt IE 7]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
 
 	<main ng-view></main>
 
-	<script data-main="script/app/main" src="script/bower_components/requirejs/require.js"></script>		
+	<script data-main="script/app/main" src="libs/requirejs/require.js"></script>		
 </body>
 </html>
