master * Add directive to home module : edition in place behavior going through

--- a/script/app/modules/home/home.template.html
+++ b/script/app/modules/home/home.template.html
@@ -7,10 +7,10 @@
 			<h3>{{item.firstname}} {{item.lastname}}</h3>
 
 			<div class="details">
-				<address>{{item.address}}</address>
-				<time>{{item.birthdate}}</time>
-				<p class="phone">{{item.phone}}</p>
-				<p class="desc">{{item.description}}</p>
+				<address><edit value="item.address"></edit></address>
+				<time><edit value="item.birthdate"></edit></time>
+				<p class="phone"><edit value="item.phone"></edit></p>
+				<div class="desc"><edit class="multiline" value="item.description"></edit></div>
 			</div>
 		</div>
 	</div>
