master * Add github informations

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
 	<main ng-view></main>
 
-	<script data-main="script/app/main" src="libs/requirejs/require.js"></script>		
+	<p id="github"><a href="https://github.com/Stuff90/Talentoday-test" target="_blank"></a></p>
+
+	<script data-main="script/app/main" src="libs/requirejs/require.js"></script>
 </body>
 </html>
